--- a/404.html
+++ b/404.html
@@ -38,9 +38,10 @@
                             <p>The page you are looking for might have been removed, had its name changed.</p>
                             <a href="index.html" class="btn btn-error">RETURN TO THE HOMEPAGE</a>
                             <div class="social-link">
-                                <span><a href="#"><i class="fa fa-facebook"></i></a></span>
-                                <span><a href="#"><i class="fa fa-twitter"></i></a></span>
-                                <span><a href="#"><i class="fa fa-google-plus"></i></a></span>
+                                <span><a href="https://www.github.com/0x56794e" target="_blank"><i class="fa fa-github"></i></a></span>
+	                        	<span><a href="https://www.linkedin.com/in/vythuyn/"><i class="fa fa-linkedin"></i></a></span>
+	                            <span><a href="https://www.twitter.com/0x56794e" target="_blank"><i class="fa fa-twitter"></i></a></span>
+	                            <span><a href="https://www.instagram.com/0x56794e" target="_blank"><i class="fa fa-instagram"></i></a></span>
                             </div>
                         </div>
                     </div>
