--- a/about.html
+++ b/about.html
@@ -31,10 +31,10 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                        <ul class="nav nav-pills">
-                        	<li><a href="https://www.github.com/0x56794e" target="_blank"><i class="fa fa-github"></i></a>
+                        	<li><a href="https://www.github.com/0x56794e" target="_blank"><i class="fa fa-github"></i></a></li>
                         	<li><a href="https://www.linkedin.com/in/vythuyn/"><i class="fa fa-linkedin"></i></a></li>
                             <li><a href="https://www.twitter.com/0x56794e" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.instagram.com/0x56794e" target="_blank"><i class="fa fa-instagram"></i></a>
+                            <li><a href="https://www.instagram.com/0x56794e" target="_blank"><i class="fa fa-instagram"></i></a></li>
                         </ul>
                     </div> 
                 </div>
