--- a/travel.html
+++ b/travel.html
@@ -68,14 +68,6 @@
                         </li>                          
                     </ul>
                 </div>
-<!--                 <div class="search"> -->
-<!--                     <form role="form"> -->
-<!--                         <i class="fa fa-search"></i> -->
-<!--                         <div class="field-toggle"> -->
-<!--                             <input type="text" class="search-form" autocomplete="off" placeholder="Search"> -->
-<!--                         </div> -->
-<!--                     </form> -->
-<!--                 </div> -->
             </div>
         </div>
     </header>
@@ -134,6 +126,27 @@
 				    </div>
 				    <div class="item">
 				      <img src="images/travel/lju_chess.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_cathedral.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_lovelock.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_map.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_montblanc.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_zurich.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_zurich2.jpg" alt="Chess board next to Lake Bled">
+				    </div>
+				    <div class="item">
+				      <img src="images/travel/lju_zurich3.jpg" alt="Chess board next to Lake Bled">
 				    </div>
 				  </div>
 				
