--- a/travel.html
+++ b/travel.html
@@ -107,7 +107,7 @@
 				  <!-- Wrapper for slides -->
 				  <div class="carousel-inner" role="listbox">
 				    <div class="item active">
-				      <img src="images/travel/lju_castle.jpg" alt="Ljubljana Castle">
+				      <img src="images/travel/montblanc.jpg" alt="Mont Blanc">
 				    </div>
 				
 				    <div class="item">
