--- a/travel.html
+++ b/travel.html
@@ -102,6 +102,16 @@
 				    <li data-target="#myCarousel" data-slide-to="1"></li>
 				    <li data-target="#myCarousel" data-slide-to="2"></li>
 				    <li data-target="#myCarousel" data-slide-to="3"></li>
+				    <li data-target="#myCarousel" data-slide-to="4"></li>
+				    <li data-target="#myCarousel" data-slide-to="5"></li>
+				    <li data-target="#myCarousel" data-slide-to="6"></li>
+				    <li data-target="#myCarousel" data-slide-to="7"></li>
+				    <li data-target="#myCarousel" data-slide-to="8"></li>
+				    <li data-target="#myCarousel" data-slide-to="9"></li>
+				    <li data-target="#myCarousel" data-slide-to="10"></li>
+				    <li data-target="#myCarousel" data-slide-to="11"></li>
+				    <li data-target="#myCarousel" data-slide-to="12"></li>
+				    <li data-target="#myCarousel" data-slide-to="13"></li>
 				  </ol>
 				
 				  <!-- Wrapper for slides -->
@@ -129,7 +139,7 @@
 				      <img src="images/travel/lju_cathedral.jpg" alt="Near Ljubljana Cathedral">
 				    </div>
 				    <div class="item">
-				      <img src="images/travel/lju_chessjpg" alt="Chess board next to Lake Bled">
+				      <img src="images/travel/lju_chess.jpg" alt="Chess board next to Lake Bled">
 				    </div>
 				    <div class="item">
 				      <img src="images/travel/lju_lovelock.jpg" alt="Love locks in Ljubljana">
