--- a/travel.html
+++ b/travel.html
@@ -199,22 +199,22 @@
 				    <div class="item">
 				      <img src="images/travel/zurich.jpg" alt="Zurich">
 				      <div class="carousel-caption">
-				        <h3>Zurich, Switzerland</h3>
-				        <p>Beautiful harbor front in Zurich</p>
+				        <h3>Z&uuml;rich, Switzerland</h3>
+				        <p>Beautiful view by the harbor in Z&uuml;rich</p>
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/travel/zurich2.jpg" alt="Zurich">
 				      <div class="carousel-caption">
 				        <h3>Zurich, Switzerland</h3>
-				        <p>Beautiful harbor front in Zurich</p>
+				        <p>Beautiful view of Lake Zurich (Z&uuml;richsee)</p>
 				      </div>
 				    </div>
 				    <div class="item">
 				      <img src="images/travel/zurich3.jpg" alt="Zurich">
 				      <div class="carousel-caption">
-				        <h3>Zurich, Switzerland</h3>
-				        <p>Fall in Zurich</p>
+				        <h3>Z&uuml;rich, Switzerland</h3>
+				        <p>Fall in Z&uuml;rich</p>
 				      </div>
 				    </div>
 				  </div>
