--- a/travel.html
+++ b/travel.html
@@ -132,7 +132,7 @@
 				      <img src="images/travel/montblanc.jpg" alt="Mont Blanc">
 				      <div class="carousel-caption">
 				        <h3>Aiguille du Midi, Chamonix</h3>
-				        <p>Admiring the French Alps from over 12,000 feet.</p>
+				        <p>Admiring the French Alps from over 12,000 feet in altitude.</p>
 				      </div>
 				    </div>
 				
