--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
                 <div class="main-slider">
                     <div class="slide-text">
                         <h2>Current</h2>
-                        <p>Georgia Tech; M.S. in Computational Science & Engineering</p>
+                        <p>Amazon, Seattle, WA; Software Engineer</p>
                         
                         <h2>Previous</h2>
+                        <p>Georgia Tech; M.S. in Computational Science & Engineering</p>
                         <p>BMW Group, Munich, Germany; Software Engineer</p>
                         <p>OANDA, Boston, MA; Software Engineer</p>
                         <p>UMass Boston; B.S. in Computer Science</p>
